[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entities/Fireball/Fireball.gd" type="Script" id=1]
[ext_resource path="res://Entities/Fireball/fireball_explode_1.png" type="Texture" id=2]
[ext_resource path="res://Entities/Fireball/fireball_explode_2.png" type="Texture" id=3]
[ext_resource path="res://Entities/Fireball/fireball_explode_3.png" type="Texture" id=4]
[ext_resource path="res://Entities/Fireball/fireball_explode_4.png" type="Texture" id=5]
[ext_resource path="res://Entities/Fireball/fireball_fly_1.png" type="Texture" id=6]
[ext_resource path="res://Entities/Fireball/fireball_fly_2.png" type="Texture" id=7]
[ext_resource path="res://Entities/Fireball/fireball_fly_3.png" type="Texture" id=8]
[ext_resource path="res://Entities/Fireball/fireball_fly_4.png" type="Texture" id=9]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[node name="Fireball" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fly"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SoundExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 6.0
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
